[gd_scene load_steps=48 format=3 uid="uid://be6k5yjppap8y"]

[ext_resource type="Script" uid="uid://kjtpy8vvpaku" path="res://Components/Creatures/Creature.gd" id="1_aoml0"]
[ext_resource type="Texture2D" uid="uid://bggggslmjgoyi" path="res://Assets/Creatures/Yellow/creature1_yellow.png" id="2_ovmof"]
[ext_resource type="Texture2D" uid="uid://qjav2ihmnlm5" path="res://Assets/Creatures/Yellow/creature1_yellow_border.png" id="3_y0ys5"]
[ext_resource type="PackedScene" uid="uid://mghbvp3knkqw" path="res://Components/Creatures/Creature_AnimationPlayer.tscn" id="4_aoml0"]
[ext_resource type="PackedScene" uid="uid://23u33yt4jga3" path="res://Components/Creatures/merged_creature.tscn" id="4_eqse5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulpcw"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01bph"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyqeq"]
atlas = ExtResource("2_ovmof")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq275"]
atlas = ExtResource("2_ovmof")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8verg"]
atlas = ExtResource("2_ovmof")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp0to"]
atlas = ExtResource("2_ovmof")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_daqc6"]
atlas = ExtResource("2_ovmof")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq5n7"]
atlas = ExtResource("2_ovmof")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gk32"]
atlas = ExtResource("2_ovmof")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ce46"]
atlas = ExtResource("2_ovmof")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s34ti"]
atlas = ExtResource("2_ovmof")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxwhh"]
atlas = ExtResource("2_ovmof")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrhs7"]
atlas = ExtResource("2_ovmof")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_823ty"]
atlas = ExtResource("2_ovmof")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hyqeq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyqeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq275")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8verg")
}],
"loop": true,
"name": &"idle-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp0to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daqc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq5n7")
}],
"loop": true,
"name": &"idle-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gk32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ce46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s34ti")
}],
"loop": true,
"name": &"idle-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxwhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrhs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_823ty")
}],
"loop": true,
"name": &"idle-up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0dfji"]
atlas = ExtResource("3_y0ys5")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tgii"]
atlas = ExtResource("3_y0ys5")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk2w2"]
atlas = ExtResource("3_y0ys5")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shrdh"]
atlas = ExtResource("3_y0ys5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_272yj"]
atlas = ExtResource("3_y0ys5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pggle"]
atlas = ExtResource("3_y0ys5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdu03"]
atlas = ExtResource("3_y0ys5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adlnc"]
atlas = ExtResource("3_y0ys5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek4uy"]
atlas = ExtResource("3_y0ys5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw7n1"]
atlas = ExtResource("3_y0ys5")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t54g4"]
atlas = ExtResource("3_y0ys5")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wnkt"]
atlas = ExtResource("3_y0ys5")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gq275"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dfji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tgii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk2w2")
}],
"loop": true,
"name": &"idle-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shrdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pggle")
}],
"loop": true,
"name": &"idle-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdu03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adlnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek4uy")
}],
"loop": true,
"name": &"idle-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw7n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t54g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wnkt")
}],
"loop": true,
"name": &"idle-up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_686wa"]
resource_name = "IdleDown"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSpriteCreature:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedSpriteCreature:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-down"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_rhkh2"]
resource_name = "IdleLeft"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSpriteCreature:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedSpriteCreature:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-left"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_absrx"]
resource_name = "IdleRight"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSpriteCreature:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedSpriteCreature:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-right"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_2a2x6"]
resource_name = "IdleUp"
length = 0.75
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSpriteCreature:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedSpriteCreature:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-up"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_li2mp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/AnimatedSpriteCreature:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/AnimatedSpriteCreature:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-down"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/AnimatedSpriteBorder:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle-down"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/AnimatedSpriteBorder:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kl681"]
_data = {
&"IdleDown": SubResource("Animation_686wa"),
&"IdleLeft": SubResource("Animation_rhkh2"),
&"IdleRight": SubResource("Animation_absrx"),
&"IdleUp": SubResource("Animation_2a2x6"),
&"RESET": SubResource("Animation_li2mp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6hr7e"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_txib7"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vt68a"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pm2f3"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0v2f6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_6hr7e")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_txib7")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_vt68a")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_pm2f3")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_x8eks"]
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_0v2f6")
nodes/BlendSpace2D/position = Vector2(60, 100)
node_connections = [&"output", 0, &"BlendSpace2D"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ap3gg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4gk32"]
states/Idle/node = SubResource("AnimationNodeBlendTree_x8eks")
states/Idle/position = Vector2(519, 100)
states/Start/position = Vector2(208, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ap3gg")]
graph_offset = Vector2(9, -9)

[node name="CreatureYellow" type="CharacterBody2D" groups=["creature"]]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_aoml0")
metadata/_custom_type_script = "uid://kjtpy8vvpaku"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_ulpcw")

[node name="Areas" type="Node2D" parent="."]

[node name="Area2D_Right" type="Area2D" parent="Areas"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Right" type="CollisionShape2D" parent="Areas/Area2D_Right"]
position = Vector2(64, 0)
shape = SubResource("RectangleShape2D_01bph")

[node name="Area2D_Bottom" type="Area2D" parent="Areas"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Bottom" type="CollisionShape2D" parent="Areas/Area2D_Bottom"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_01bph")

[node name="Area2D_Left" type="Area2D" parent="Areas"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Left" type="CollisionShape2D" parent="Areas/Area2D_Left"]
position = Vector2(-64, 0)
shape = SubResource("RectangleShape2D_01bph")

[node name="Area2D_Top" type="Area2D" parent="Areas"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D_Top" type="CollisionShape2D" parent="Areas/Area2D_Top"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_01bph")

[node name="Visuals" type="Node2D" parent="."]
position = Vector2(0, -5)

[node name="AnimatedSpriteCreature" type="AnimatedSprite2D" parent="Visuals"]
modulate = Color(1.1, 1.1, 1.1, 1)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_hyqeq")
animation = &"idle-down"

[node name="AnimatedSpriteBorder" type="AnimatedSprite2D" parent="Visuals"]
visible = false
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_gq275")
animation = &"idle-down"

[node name="AnimationPlayerMovement" type="AnimationPlayer" parent="Visuals"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_kl681")
}
autoplay = "IdleDown"

[node name="AnimationTree" type="AnimationTree" parent="Visuals"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_4gk32")
anim_player = NodePath("../AnimationPlayerMovement")
parameters/Idle/BlendSpace2D/blend_position = Vector2(-0.00303954, 0.35426)

[node name="AnimationPlayer" parent="Visuals" instance=ExtResource("4_aoml0")]

[node name="MergedCreature" parent="." instance=ExtResource("4_eqse5")]
visible = false

[connection signal="body_entered" from="Areas/Area2D_Right" to="." method="on_creature_to_right"]
[connection signal="body_exited" from="Areas/Area2D_Right" to="." method="_on_creature_right_gone"]
[connection signal="body_entered" from="Areas/Area2D_Bottom" to="." method="on_creature_to_bottom"]
[connection signal="body_exited" from="Areas/Area2D_Bottom" to="." method="_on_creature_bottom_gone"]
[connection signal="body_entered" from="Areas/Area2D_Left" to="." method="on_creature_to_left"]
[connection signal="body_exited" from="Areas/Area2D_Left" to="." method="_on_creature_left_gone"]
[connection signal="body_entered" from="Areas/Area2D_Top" to="." method="on_creature_to_top"]
[connection signal="body_exited" from="Areas/Area2D_Top" to="." method="_on_creature_top_gone"]
